// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> renders disabled accordion 1`] = `
.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-6 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

.emotion-8 {
  border-radius: 4px;
  border: 1px solid #ededf0;
  width: 100%;
  opacity: 0.4;
  background-color: #ededf0;
  border-color: #c3c0cd;
}

.emotion-8:not(:last-child) {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: not-allowed;
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

<div
  className="emotion-8 emotion-9"
  disabled={true}
>
  <div
    aria-disabled={true}
    aria-expanded={false}
    className="emotion-4 emotion-5"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <svg
        fill="#332e54"
        height={16}
        rotate={0}
        width={16}
      />
    </div>
  </div>
  <div
    aria-disabled={true}
    aria-hidden={true}
    className="emotion-6 emotion-7"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders no border accordion 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-6 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

.emotion-8 {
  border-radius: 4px;
  width: 100%;
}

.emotion-8:not(:last-child) {
  border-bottom: none;
}

<div
  className="emotion-8 emotion-9"
  disabled={false}
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="emotion-4 emotion-5"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <svg
        fill="#332e54"
        height={16}
        rotate={0}
        width={16}
      />
    </div>
  </div>
  <div
    aria-disabled={false}
    aria-hidden={true}
    className="emotion-6 emotion-7"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders regular accordion 1`] = `
.emotion-8 {
  border-radius: 4px;
  border: 1px solid #ededf0;
  width: 100%;
}

.emotion-8:not(:last-child) {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
}

.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-6 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

<div
  className="emotion-8 emotion-9"
  disabled={false}
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="emotion-4 emotion-5"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <svg
        fill="#332e54"
        height={16}
        rotate={0}
        width={16}
      />
    </div>
  </div>
  <div
    aria-disabled={false}
    aria-hidden={true}
    className="emotion-6 emotion-7"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;
